fix a bug with the wrong margin

--- a/css/style.css
+++ b/css/style.css
@@ -214,8 +214,8 @@ body {
     .feature-box:hover .heading-tertiary {
       border-bottom: 0.1rem solid #55c57a;
       display: table;
-      margin: auto;
-      margin-bottom: 2rem; }
+      margin-right: auto;
+      margin-left: auto; }
 
 .row {
   max-width: 114rem;
