--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -23,8 +23,8 @@
         & .heading-tertiary{
             border-bottom: .1rem solid $color-primary;
             display: table;
-            margin: auto;
-            margin-bottom: 2rem;
+            margin-right: auto;
+            margin-left: auto;
         }
     }
 
